<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="action_settings">Settings</string>
    <string name="app_name">三国大时代2一统天下</string>
    <string name="appdownloader_button_cancel_download">取消</string>
    <string name="appdownloader_button_queue_for_wifi">排队</string>
    <string name="appdownloader_button_start_now">立即开始</string>
    <string name="appdownloader_download_percent">%1$d%%</string>
    <string name="appdownloader_download_remaining">剩余时间：%1$s</string>
    <string name="appdownloader_download_unknown_title">&lt;未命名></string>
    <string name="appdownloader_duration_hours">%1$d 小时</string>
    <string name="appdownloader_duration_minutes">%1$d 分钟</string>
    <string name="appdownloader_duration_seconds">%1$d 秒</string>
    <string name="appdownloader_jump_unknown_source">请打开应用安装权限，以便顺利安装！</string>
    <string name="appdownloader_label_cancel">取消</string>
    <string name="appdownloader_label_ok">确定</string>
    <string name="appdownloader_notification_download">下载</string>
    <string name="appdownloader_notification_download_complete_open">下载完成，点击打开。</string>
    <string name="appdownloader_notification_download_complete_with_install">下载完成，点击安装。</string>
    <string name="appdownloader_notification_download_complete_without_install">下载完成</string>
    <string name="appdownloader_notification_download_delete">确认要删除%1$s的下载任务吗？</string>
    <string name="appdownloader_notification_download_failed">下载失败。</string>
    <string name="appdownloader_notification_download_install">安装</string>
    <string name="appdownloader_notification_download_open">打开</string>
    <string name="appdownloader_notification_download_pause">暂停</string>
    <string name="appdownloader_notification_download_restart">重新下载</string>
    <string name="appdownloader_notification_download_resume">继续</string>
    <string name="appdownloader_notification_download_space_failed">SdCard空间不足, 下载失败。</string>
    <string name="appdownloader_notification_download_waiting_net">等待网络继续下载</string>
    <string name="appdownloader_notification_download_waiting_wifi">等待wifi开始下载</string>
    <string name="appdownloader_notification_downloading">正在下载</string>
    <string name="appdownloader_notification_install_finished_open">安装完成，点击打开。</string>
    <string name="appdownloader_notification_need_wifi_for_size">文件过大，需要通过 WLAN 下载。</string>
    <string name="appdownloader_notification_paused_in_background">已在后台暂停。</string>
    <string name="appdownloader_notification_pausing">暂停中</string>
    <string name="appdownloader_notification_prepare">准备中</string>
    <string name="appdownloader_notification_request_btn_no">立即下载</string>
    <string name="appdownloader_notification_request_btn_yes">去设置</string>
    <string name="appdownloader_notification_request_message">为了您能在方便地在通知栏控制下载任务，请到设置中开启通知，如果不需要可直接下载</string>
    <string name="appdownloader_notification_request_title">设置</string>
    <string name="appdownloader_notification_waiting_download_complete_handler">处理中</string>
    <string name="appdownloader_tip">提示</string>
    <string name="appdownloader_wifi_recommended_body">"立即开始下载此内容 (%1$s ) 可能会缩短电池的使用时间并/或导致过量使用移动数据连接流量（这可能导致移动运营商向您收费，具体取决于您的流量套餐）。

触摸“%2$s”可在下次连接到 WLAN 网络时开始下载此内容。"</string>
    <string name="appdownloader_wifi_recommended_title">稍后再加入下载队列吗？</string>
    <string name="appdownloader_wifi_required_body">"您必须使用 WLAN 完成此内容 (%1$s ) 的下载。

触摸“%2$s ”可在下次连接到 WLAN 网络时开始下载此内容。"</string>
    <string name="appdownloader_wifi_required_title">文件太大，不适于通过运营商网络下载</string>
    <string name="hello">Hello world!</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="tt_00_00">00:00</string>
    <string name="tt_ad">Ad</string>
    <string name="tt_ad_logo_txt">广告</string>
    <string name="tt_app_name">tt_open_ad_sdk</string>
    <string name="tt_app_privacy_dialog_title">隐私政策</string>
    <string name="tt_auto_play_cancel_text">取消</string>
    <string name="tt_cancel">取消</string>
    <string name="tt_comment_num">%1$s个评分</string>
    <string name="tt_comment_num_backup">(%1$s个评论)</string>
    <string name="tt_comment_score">评价</string>
    <string name="tt_common_download_app_detail">应用详情</string>
    <string name="tt_common_download_app_privacy">隐私协议</string>
    <string name="tt_common_download_cancel">放弃下载</string>
    <string name="tt_confirm_download">正在使用非Wifi网络，确认要进行下载吗？</string>
    <string name="tt_confirm_download_have_app_name">准备下载%s应用</string>
    <string name="tt_dislike_header_tv_back">返回</string>
    <string name="tt_dislike_header_tv_title">选择</string>
    <string name="tt_full_screen_skip_tx">5s后可跳过</string>
    <string name="tt_label_cancel">取消</string>
    <string name="tt_label_ok">确定</string>
    <string name="tt_no_network">无网络，请稍后再试</string>
    <string name="tt_open_app_detail_developer">开发者：%1$s</string>
    <string name="tt_open_app_detail_privacy">隐私协议：</string>
    <string name="tt_open_app_detail_privacy_list">权限列表</string>
    <string name="tt_open_app_name">应用名称：%1$s</string>
    <string name="tt_open_app_version">版本号：%1$s</string>
    <string name="tt_open_landing_page_app_name">应用名称：%1$s 版本：%2$s</string>
    <string name="tt_permission_denied">您已禁止授权操作，请授权</string>
    <string name="tt_playable_btn_play">立即体验</string>
    <string name="tt_request_permission_descript_external_storage">存储</string>
    <string name="tt_request_permission_descript_location">位置信息</string>
    <string name="tt_request_permission_descript_read_phone_state">拨打电话</string>
    <string name="tt_reward_feedback">反馈</string>
    <string name="tt_reward_screen_skip_tx">跳过</string>
    <string name="tt_splash_skip_tv_text">3s | 跳过</string>
    <string name="tt_tip">提示</string>
    <string name="tt_unlike">不感兴趣</string>
    <string name="tt_video_bytesize">流量</string>
    <string name="tt_video_bytesize_M">M</string>
    <string name="tt_video_bytesize_MB">MB</string>
    <string name="tt_video_continue_play">继续播放</string>
    <string name="tt_video_dial_phone">立即拨打</string>
    <string name="tt_video_dial_replay">重新播放</string>
    <string name="tt_video_download_apk">立即下载</string>
    <string name="tt_video_mobile_go_detail">查看详情</string>
    <string name="tt_video_retry_des_txt">加载失败，点击重试</string>
    <string name="tt_video_without_wifi_tips">播放将消耗</string>
    <string name="tt_web_title_default">广告</string>
    <string name="tt_will_play">即将播放</string>
</resources>
