<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="200.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_gravity="center_horizontal" android:id="@id/tt_open_app_detail_layout" android:background="@drawable/tt_app_detail_bg" android:layout_width="344.0dip" android:layout_height="wrap_content" android:layout_marginTop="16.0dip">
        <TextView android:textSize="14.0sp" android:textColor="#80161823" android:ellipsize="end" android:gravity="center_vertical" android:id="@id/tt_app_name_tv" android:layout_width="332.0dip" android:layout_height="21.0dip" android:layout_marginLeft="12.0dip" android:layout_marginTop="12.0dip" android:layout_marginBottom="4.0dip" android:text="@string/tt_open_app_name" android:singleLine="true" />
        <TextView android:textSize="14.0sp" android:textColor="#80161823" android:ellipsize="end" android:gravity="center_vertical" android:id="@id/tt_app_version_tv" android:layout_width="332.0dip" android:layout_height="21.0dip" android:layout_marginLeft="12.0dip" android:layout_marginBottom="4.0dip" android:text="@string/tt_open_app_version" android:singleLine="true" android:layout_below="@id/tt_app_name_tv" />
        <TextView android:textSize="14.0sp" android:textColor="#80161823" android:ellipsize="end" android:gravity="center_vertical" android:id="@id/tt_app_developer_tv" android:layout_width="332.0dip" android:layout_height="21.0dip" android:layout_marginLeft="12.0dip" android:layout_marginBottom="4.0dip" android:text="@string/tt_open_app_detail_developer" android:singleLine="true" android:layout_below="@id/tt_app_version_tv" />
        <TextView android:textSize="14.0sp" android:textColor="#80161823" android:gravity="center_vertical" android:id="@id/tt_app_privacy_tv" android:layout_width="75.0dip" android:layout_height="21.0dip" android:layout_marginLeft="12.0dip" android:layout_marginBottom="12.0dip" android:text="@string/tt_open_app_detail_privacy" android:layout_below="@id/tt_app_developer_tv" />
        <TextView android:textSize="14.0sp" android:textColor="#ff1a73e8" android:ellipsize="end" android:id="@id/tt_app_privacy_url_tv" android:layout_width="fill_parent" android:layout_height="21.0dip" android:singleLine="true" android:layout_toRightOf="@id/tt_app_privacy_tv" android:layout_alignTop="@id/tt_app_privacy_tv" />
    </RelativeLayout>
    <TextView android:textSize="20.0sp" android:textColor="#ff161823" android:gravity="center" android:id="@id/tt_app_privacy_title" android:layout_width="90.0dip" android:layout_height="28.0dip" android:layout_marginLeft="16.0dip" android:layout_marginTop="38.0dip" android:text="@string/tt_open_app_detail_privacy_list" />
</LinearLayout>