<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="#99000000" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="500.0dip" android:layout_alignParentBottom="true">
        <FrameLayout android:id="@id/tt_privacy_layout" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <com.bytedance.sdk.openadsdk.core.widget.webview.SSWebView android:id="@id/tt_privacy_webview" android:layout_width="fill_parent" android:layout_height="fill_parent" />
        </FrameLayout>
        <RelativeLayout android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="60.0dip">
            <TextView android:ellipsize="end" android:gravity="center" android:id="@id/tt_app_detail_back_tv" android:background="@drawable/tt_app_detail_black" android:layout_width="20.0dip" android:layout_height="20.0dip" android:layout_marginRight="22.0dip" android:singleLine="true" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:lineSpacingExtra="2.0sp" />
            <TextView android:textSize="16.0sp" android:textColor="#ff222222" android:gravity="center" android:layout_width="70.0dip" android:layout_height="30.0dip" android:text="@string/tt_common_download_app_detail" android:layout_centerInParent="true" />
        </RelativeLayout>
        <ImageView android:background="@color/tt_app_detail_line_bg" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <RelativeLayout android:layout_gravity="center_horizontal" android:id="@id/tt_open_app_detail_layout" android:background="@drawable/tt_app_detail_bg" android:layout_width="344.0dip" android:layout_height="wrap_content" android:layout_marginTop="16.0dip">
            <TextView android:textSize="14.0sp" android:textColor="#80161823" android:ellipsize="end" android:gravity="center_vertical" android:id="@id/tt_app_developer_tv" android:layout_width="332.0dip" android:layout_height="21.0dip" android:layout_marginLeft="12.0dip" android:layout_marginTop="12.0dip" android:layout_marginBottom="4.0dip" android:text="@string/tt_open_app_detail_developer" android:singleLine="true" />
            <TextView android:textSize="14.0sp" android:textColor="#80161823" android:ellipsize="end" android:gravity="center_vertical" android:id="@id/tt_app_version_tv" android:layout_width="332.0dip" android:layout_height="21.0dip" android:layout_marginLeft="12.0dip" android:layout_marginBottom="4.0dip" android:text="@string/tt_open_app_version" android:singleLine="true" android:layout_below="@id/tt_app_developer_tv" />
            <TextView android:textSize="14.0sp" android:textColor="#80161823" android:gravity="center_vertical" android:id="@id/tt_app_privacy_tv" android:layout_width="75.0dip" android:layout_height="21.0dip" android:layout_marginLeft="12.0dip" android:layout_marginBottom="12.0dip" android:text="@string/tt_open_app_detail_privacy" android:layout_below="@id/tt_app_version_tv" />
            <TextView android:textSize="14.0sp" android:textColor="#ff1a73e8" android:ellipsize="end" android:id="@id/tt_app_privacy_url_tv" android:layout_width="fill_parent" android:layout_height="21.0dip" android:singleLine="true" android:layout_toRightOf="@id/tt_app_privacy_tv" android:layout_alignTop="@id/tt_app_privacy_tv" />
        </RelativeLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="234.0dip">
            <TextView android:textSize="20.0sp" android:textColor="#ff161823" android:gravity="center" android:layout_width="90.0dip" android:layout_height="30.0dip" android:layout_marginLeft="16.0dip" android:layout_marginTop="40.0dip" android:text="@string/tt_open_app_detail_privacy_list" />
            <ListView android:id="@id/tt_privacy_list" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="20.0dip" android:listSelector="@android:color/transparent" android:divider="@null" android:dividerHeight="24.0dip" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <Button android:id="@id/tt_download_app_btn" android:background="@drawable/tt_open_app_detail_download_btn_bg" android:layout_width="343.0dip" android:layout_height="44.0dip" android:layout_margin="16.0dip" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>